--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         body {
             background-image: url(mahaveer-bg.jpg);
             background-repeat: no-repeat;
-            background-size: auto;
+            background-size: cover;
             color: white;
         }
 
