--- a/index.html
+++ b/index.html
@@ -50,12 +50,20 @@
 
             #foregroundImageInput,
             #input {
+                max-width: 100vh;
                 color: white;
                 font-size: larger;
                 padding: 10px;
                 margin-bottom: 15px;
                 border: 1px solid #ccc;
                 border-radius: 15px;
+            }
+
+            body {
+                background-image: url(mahaveer-bg.jpg);
+                background-repeat: no-repeat;
+                background-size: 100vh;
+                color: white;
             }
         }
     </style>
