--- a/index.html
+++ b/index.html
@@ -11,11 +11,6 @@
     <meta property="og:image:type" content="image/png">
     <title>Mahaveer Janma Kalyanak Card</title>
     <style>
-        #content {
-            min-height: calc(100% - 50px);
-            padding-bottom: 50px;
-        }
-
         .footer {
             background-color: white;
             color: black;
@@ -23,9 +18,9 @@
             bottom: 0;
             left: 0;
             width: 100%;
-            height: 50px;
+            height: 60px;
             text-align: center;
-            line-height: 50px;
+            line-height: 5px;
         }
 
         #loading-popup {
@@ -68,6 +63,11 @@
         @media only screen and (max-width: 600px) {
             img {
                 height: 100px;
+            }
+
+            #content {
+                min-height: calc(100% - 50px);
+                padding-bottom: 50px;
             }
 
             #combineAndDownloadButton {
@@ -118,6 +118,7 @@
                 background-repeat: no-repeat;
                 background-size: cover;
                 color: white;
+                height: 100vh;
             }
 
             #combineAndDownloadButton {
@@ -173,7 +174,7 @@
         <div class="loading-text"> Fetching Template... </div>
     </div>
     <footer class="footer">
-        <p>&copy; Shakimar Studio </p>
+        <p> &copy; Shalimar Studio </p>
         <p> Developed by Kalash Shah - 9426921383</p>
     </footer>
 
