--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
     <title>Mahaveer Janma Kalyanak Card</title>
     <style>
         .footer {
-            background-color: white;
-            color: black;
+            color: white;
             position: fixed;
             bottom: 0;
             left: 0;
