--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             bottom: 0;
             left: 0;
             width: 100%;
+            font-size: small;
             height: 60px;
             text-align: center;
             line-height: 5px;
@@ -153,7 +154,6 @@
 </head>
 
 <body>
-
     <div id="content">
         <center>
             <img src="mahaveer-logo.jpg" class="logo">
@@ -166,11 +166,10 @@
             <canvas id="canvas" width="2104" height="2100" style="display:none;"></canvas> <br>
             <img id="generatedImage" alt="">
         </center>
-    </div>
-    <!-- Loading popup -->
+    </div> 
     <div id="loading-popup">
         <div class="spinner"></div>
-        <div class="loading-text"> Fetching Template... </div>
+        <div class="loading-text"> Fetching Template... </div> 
     </div>
     <footer class="footer">
         <p> &copy; Shalimar Studio </p>
