--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             bottom: 0;
             left: 0;
             width: 100%;
-            font-size: small;
+            font-size: 8px;
             height: 60px;
             text-align: center;
             line-height: 5px;
